--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <img src="dice-5.png" alt="Dice" class="dice" id="dice-1">
             <img src="dice-5.png" alt="Dice" class="dice" id="dice-2">
         </div>
+
+        <div class="footer">Diana Genius &copy 2020</div>
         
         <!--<script src="app.js"></script>-->
         <script src="challenges.js"></script>
